Replace deprecated Plexus dependencies with Eclipse Sisu (#107)
* Replace deprecated plexus dependencies with eclipse sisu

* Remove Handlebars test dependencies from swagger-maven-plugin

* Remove unused maven-compat dependency