@@ -20,8 +20,6 @@ import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
 import org.apache.maven.project.MavenProject;
-import org.codehaus.plexus.util.FileUtils;
-import org.codehaus.plexus.util.StringUtils;
 import tools.jackson.core.JacksonException;
 
 import java.io.File;
@@ -56,11 +54,11 @@ public class SwaggerMojo extends AbstractMojo {
 
         if (project != null) {
             String pEnc = project.getProperties().getProperty("project.build.sourceEncoding");
-            if (StringUtils.isNotBlank(pEnc)) {
+            if (pEnc != null && !pEnc.isBlank()) {
                 projectEncoding = pEnc;
             }
         }
-        if (StringUtils.isBlank(encoding)) {
+        if (encoding == null || encoding.isBlank()) {
             encoding = projectEncoding;
         }
 
@@ -79,13 +77,13 @@ public class SwaggerMojo extends AbstractMojo {
         try {
             GenericOpenApiContextBuilder builder = new JaxrsOpenApiContextBuilder()
                     .openApiConfiguration(config);
-            if (StringUtils.isNotBlank(contextId)) {
+            if (contextId != null && !contextId.isBlank()) {
                 builder.ctxId(contextId);
             }
             OpenApiContext context = builder.buildContext(true);
             OpenAPI openAPI = context.read();
 
-            if (StringUtils.isNotBlank(config.getFilterClass())) {
+            if (config.getFilterClass() != null && !config.getFilterClass().isBlank()) {
                 try {
                     OpenAPISpecFilter filterImpl = (OpenAPISpecFilter) this.getClass().getClassLoader().loadClass(config.getFilterClass()).newInstance();
                     SpecFilter f = new SpecFilter();
@@ -203,7 +201,7 @@ public class SwaggerMojo extends AbstractMojo {
             throws MojoFailureException {
         try {
             // ignore if config is not provided
-            if (StringUtils.isBlank(filePath)) {
+            if (filePath == null || filePath.isBlank()) {
                 return Optional.empty();
             }
 
@@ -218,7 +216,7 @@ public class SwaggerMojo extends AbstractMojo {
             String fileContent = new String(Files.readAllBytes(pathObj), encoding);
 
             // if provided file is empty, log warning and finish
-            if (StringUtils.isBlank(fileContent)) {
+            if (fileContent == null || fileContent.isBlank()) {
                 getLog().warn(format("It seems that file '%s' defined in config %s is empty",
                         pathObj.toString(), configName));
                 return Optional.empty();
@@ -267,6 +265,12 @@ public class SwaggerMojo extends AbstractMojo {
         }
     }
 
+    private static String getExtension(String filename) {
+        if (filename == null) return null;
+        int dotIndex = filename.lastIndexOf('.');
+        return (dotIndex == -1) ? "" : filename.substring(dotIndex + 1);
+    }
+
     /**
      * Get sorted list of mappers based on given filename.
      * <p>
@@ -277,7 +281,7 @@ public class SwaggerMojo extends AbstractMojo {
      * @return list of mappers
      */
     private <T> List<BiFunction<String, Class<T>, T>> getSortedMappers(Path pathObj) {
-        String ext = FileUtils.extension(pathObj.toString());
+        String ext = getExtension(pathObj.toString());
         boolean yamlPreferred = false;
         if (ext.equalsIgnoreCase("yaml") || ext.equalsIgnoreCase("yml")) {
             yamlPreferred = true;
@@ -309,7 +313,7 @@ public class SwaggerMojo extends AbstractMojo {
 
     private SwaggerConfiguration mergeConfig(OpenAPI openAPIInput, SwaggerConfiguration config) {
         // overwrite all settings provided by other maven config
-        if (StringUtils.isNotBlank(filterClass)) {
+        if (filterClass != null && !filterClass.isBlank()) {
             config.filterClass(filterClass);
         }
         if (isCollectionNotBlank(ignoredRoutes)) {
@@ -330,10 +334,10 @@ public class SwaggerMojo extends AbstractMojo {
         if (readAllResources != null) {
             config.readAllResources(readAllResources);
         }
-        if (StringUtils.isNotBlank(readerClass)) {
+        if (readerClass != null && !readerClass.isBlank()) {
             config.readerClass(readerClass);
         }
-        if (StringUtils.isNotBlank(scannerClass)) {
+        if (scannerClass != null && !scannerClass.isBlank()) {
             config.scannerClass(scannerClass);
         }
         if (isCollectionNotBlank(resourceClasses)) {
@@ -345,20 +349,20 @@ public class SwaggerMojo extends AbstractMojo {
         if (isCollectionNotBlank(resourcePackages)) {
             config.resourcePackages(resourcePackages);
         }
-        if (StringUtils.isNotBlank(objectMapperProcessorClass)) {
+        if (objectMapperProcessorClass != null && !objectMapperProcessorClass.isBlank()) {
             config.objectMapperProcessorClass(objectMapperProcessorClass);
         }
-        if (StringUtils.isNotBlank(defaultResponseCode)) {
+        if (defaultResponseCode != null && !defaultResponseCode.isBlank()) {
             config.defaultResponseCode(defaultResponseCode);
         }
 
-        if (StringUtils.isNotBlank(defaultResponseCode)) {
+        if (defaultResponseCode != null && !defaultResponseCode.isBlank()) {
             config.defaultResponseCode(defaultResponseCode);
         }
-        if (StringUtils.isNotBlank(validatorProcessorClass)) {
+        if (validatorProcessorClass != null && !validatorProcessorClass.isBlank()) {
             config.validatorProcessorClass(validatorProcessorClass);
         }
-        if (StringUtils.isNotBlank(groupsValidationStrategy)) {
+        if (groupsValidationStrategy != null && !groupsValidationStrategy.isBlank()) {
             config.groupsValidationStrategy(Configuration.GroupsValidationStrategy.valueOf(groupsValidationStrategy));
         }
         if (isCollectionNotBlank(modelConverterClasses)) {
@@ -368,11 +372,11 @@ public class SwaggerMojo extends AbstractMojo {
             config.openAPI31(openapi31);
         }
 
-        if (StringUtils.isNotBlank(schemaResolution)) {
+        if (schemaResolution != null && !schemaResolution.isBlank()) {
             config.schemaResolution(Schema.SchemaResolution.valueOf(schemaResolution));
         }
 
-        if (StringUtils.isNotBlank(openAPIVersion)) {
+        if (openAPIVersion != null && !openAPIVersion.isBlank()) {
             config.openAPIVersion(openAPIVersion);
         }
 
